# inverse-matrix

./: .gitignore  CMakeLists.txt  README.md  adjugate.cpp  adjugate.h  elimination.cpp  elimination.h  main.cpp
data/Stranke94/: Stranke94.mtx
data/nasa1824/: nasa1824.mtx
data/rgg010/: rgg010.mtx
